--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,11 @@
             "error",
             "never"
         ],
-        "prettier/prettier": "error"
+        "prettier/prettier": [
+            "error",
+            {
+                "endOfLine": "auto"
+            }
+        ]
     }
 }
