--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "npx eslint src/**/*.{js,jsx}",
-    "fix" : "npx eslint src/**/*.{js,jsx} --fix"
+    "fix": "npx eslint src/**/*.{js,jsx} --fix"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -27,6 +27,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.4",
+    "prop-types": "^15.8.1",
     "vite": "^4.1.0"
   }
 }
